Clean staff page

--- a/_data/staff.yml
+++ b/_data/staff.yml
@@ -199,7 +199,7 @@ phd_students:
     position: PhD Student
     team: 3ddl
     team_role: PhD student
-    status: Deep learning for range-image processing
+    status: Deep learning for range image processing
     #pages:
     email: oleg.voinov@skoltech.ru
 
