--- a/_data/3ddl/news.yml
+++ b/_data/3ddl/news.yml
@@ -1,3 +1,11 @@
+- title: Deep Learning for Geometric Computing workshop
+  date: 2020-06-14 00:00:00
+  thumbnail: https://lh4.googleusercontent.com/PbMdvTZ_AvrgZqaZmpp7kE42bEh7R9T4aSujMnWYUh8YJNgAOKqxTkxt9WWdt45U04_mkN0=w16383
+  excerpt: We organize CVPR 2020 Deep Learning for Geometric Computing Workshop and ABC Geometry Reconstruction Challenge
+  url: https://sites.google.com/view/dlgc-workshop-cvpr2020
+  fancy: true
+  fancy_style: 'style="background-color:rgba(0,0,0,.2)"'
+
 - title: Tutorials on geometric deep learning
   date: 2019-09-06 00:00:00
   thumbnail: https://static.tildacdn.com/tild6335-3630-4737-b131-383536313836/artwork-vasily-kandi.jpg
