--- a/_data/3ddl/news.yml
+++ b/_data/3ddl/news.yml
@@ -1,6 +1,6 @@
 - title: Deep Learning for Geometric Computing workshop
   date: 2020-06-14 00:00:00
-  thumbnail: https://lh4.googleusercontent.com/PbMdvTZ_AvrgZqaZmpp7kE42bEh7R9T4aSujMnWYUh8YJNgAOKqxTkxt9WWdt45U04_mkN0=w16383
+  thumbnail: https://newcodalab.lri.fr/prod-public/logos/25087/78a79/abc_logo_seg.png
   excerpt: We organize CVPR 2020 Deep Learning for Geometric Computing Workshop and ABC Geometry Reconstruction Challenge
   url: https://sites.google.com/view/dlgc-workshop-cvpr2020
   fancy: true
