Neuro template complete

--- a/_data/neuro/nav_bar.yml
+++ b/_data/neuro/nav_bar.yml
@@ -4,9 +4,9 @@
   href: "/neuro/people/"
 - title: "Activities"
   href: "/neuro/activities/"
-  title: "Research"
+- title: "Research"
   href: "/neuro/research/"
 - title: "Publications"
   href: "/neuro/publications/"
-  title: "Openings"
-  href: "/neuro/Openings/"
+- title: "Openings"
+  href: "/neuro/openings/"
