--- a/_config.yml
+++ b/_config.yml
@@ -123,6 +123,12 @@ collections:
   staff:
     output: true
     permalink: /:collection/:title/
+  activities:
+    output: true
+    permalink: /:categories/:collection/:title/
+  researches:
+    output: true
+    permalink: /:categories/:collection/:title/
 
 news_limit: 10
 lectures_limit: 100
