new home pic and slider

--- a/_data/neuro/news.yml
+++ b/_data/neuro/news.yml
@@ -1,8 +1,8 @@
-- title: ML neuro group
-  date: 2019-09-06 00:00:00
-  thumbnail: https://static.tildacdn.com/tild6335-3630-4737-b131-383536313836/artwork-vasily-kandi.jpg
+- title: ADASE NEURO with CoBrain
+  date: 2020-07-06 00:00:00
+  thumbnail: /assets/img/neuro/cobrain.png
   excerpt:
-  url:
+  url: https://cobrain.ai/ru/colab
   superseded: true
   fancy: true
   fancy_style: 'style="background-color:rgba(0,0,0,.2)"'
