final before merge into neuroml branch

--- a/_data/staff.yml
+++ b/_data/staff.yml
@@ -115,7 +115,7 @@ researchers:
     position: Researcher
     team: neuro
     team_role: Researcher
-    status: Jack of all trades
+    status: Data engineering and HPC
     pages:
       - name: LinkedIn
         url: https://www.linkedin.com/in/vyacheslav-yarkin-64a65154
