--- a/_data/staff.yml
+++ b/_data/staff.yml
@@ -307,6 +307,7 @@ collaborators:
     name: Matthias Nießner
     category: collaborator
     position: Professor, Technical University of Munich
+    personal_page: https://niessnerlab.org/index.html
 
   Nouretdinov Ilia:
     name: Ilia Nouretdinov
