Add news about ECCV20

--- a/_data/3ddl/news.yml
+++ b/_data/3ddl/news.yml
@@ -1,3 +1,9 @@
+- title: Two papers accepted to ECCV 2020!
+  date: 2020-07-02 00:00:00
+  thumbnail: https://eccv2020.eu/wp-content/uploads/2020/05/eccv-online-logo_A.png
+  excerpt: Our papers "Deep Vectorization of Technical Drawings" and "Deformable Fitting of CAD Models to 3D Scans" were accepted to ECCV 2020
+  url: /3ddl/publications/#2020
+
 - title: Deep Learning for Geometric Computing workshop
   date: 2020-06-14 00:00:00
   thumbnail: https://newcodalab.lri.fr/prod-public/logos/25087/78a79/abc_logo_seg.png
