adding thesis topics

--- a/_data/adase/nav_bar.yml
+++ b/_data/adase/nav_bar.yml
@@ -12,5 +12,5 @@
   href: "/teaching/"
 - title: "Openings"
   href: "/openings/"
-- title: "Contact"
-  href: "/#contact"
+- title: "Thesis Topics"
+  href: "/research-topics"
