adding thesis topics

--- a/_data/adase/nav_bar.yml
+++ b/_data/adase/nav_bar.yml
@@ -10,7 +10,8 @@
   href: "/publications/"
 - title: "Teaching"
   href: "/teaching/"
-- title: "Openings"
-  href: "/openings/"
-- title: "Thesis Topics"
+- title: "Open Positions & Theses"
   href: "/research-topics"
+- title: "Contact"
+  href: "/#contact"
+
