--- a/_data/adase/title_nav_bar.yml
+++ b/_data/adase/title_nav_bar.yml
@@ -10,7 +10,7 @@
   href: "/publications/"
 - title: "Teaching"
   href: "/teaching/"
-- title: "Openings"
-  href: "/openings/"
+- title: "Open Positions & Theses"
+  href: "#openings"
 - title: "Contact"
   href: "#contact"
