adding thesis topics

--- a/_data/adase/nav_bar.yml
+++ b/_data/adase/nav_bar.yml
@@ -11,7 +11,7 @@
 - title: "Teaching"
   href: "/teaching/"
 - title: "Open Positions & Theses"
-  href: "/research-topics"
+  href: "/open-positions-theses"
 - title: "Contact"
   href: "/#contact"
 
