--- a/_data/adase/title_nav_bar.yml
+++ b/_data/adase/title_nav_bar.yml
@@ -11,6 +11,6 @@
 - title: "Teaching"
   href: "/teaching/"
 - title: "Open Positions & Theses"
-  href: "#openings"
+  href: "/open-positions-theses"
 - title: "Contact"
   href: "#contact"
